Arreglando básicos de R

--- a/Basicos_de_R.Rmd
+++ b/Basicos_de_R.Rmd
@@ -49,7 +49,7 @@ vector <- c("categ1", "categ2","categ2","categ3","categ5","categ3",
        "categ1", "categ6","categ4","categ4","categ3","categ3")
 factor <- factor(vector)
 factor
-class (y)
+class (factor)
 
 fecha <- as.Date("2022-01-01")
 class (fecha)
@@ -60,7 +60,6 @@ class (fecha)
 ### Convertir tipos de datos
 
 ```{r}
-x
 x <- 1
 class(x)
 
