--- a/tareas_econometria_1/Tarea2_2.Rmd
+++ b/tareas_econometria_1/Tarea2_2.Rmd
@@ -195,7 +195,7 @@ $-t_{\frac{\alpha}{2}, n-1} = -2.009575 > \frac{\bar{x}-\mu_0}{s / \sqrt{n}} = -
 
 Rechazamos la hipótesis nula. El verdadero promedio de grosor de las lentes utilizadas en anteojos es diferente del valor verdadero deseado de $3.20 mm$.
 
-# Ejercicio 8
+## Ejercicio 8
 
 Las personas que tienen síndrome de Reynaud están propensas a sufrir un repentino   deterioro de circulación sanguínea en los dedos de manos y pies. 
 
@@ -213,7 +213,7 @@ $$H_0: \mu_1 - \mu_2 \geq -1$$
 $$H_1: \mu_1 - \mu_2 < -1$$
 
 
-1. Muestral la evidencia muestral e información poblacional  
+2. Muestral la evidencia muestral e información poblacional  
 
 | Parámetro | Valor |
 |---:|---|
@@ -227,31 +227,166 @@ $$H_1: \mu_1 - \mu_2 < -1$$
 
 
 
+3. Al nivel de significancia establecido encontrar la región de rechazo.
 
+el estadístico de prueba es:
 
-1. Al nivel de significancia establecido encontrar la región de rechazo.
+Si
+$$Z_o = \frac{\bar{X}_1 - \bar{X}_2 - D_0}{\sqrt{\frac{\sigma_1^2}{n_1} + \frac{\sigma_2^2}{n_2}}}< z_{\alpha}$$
+Se rechaza la hipótesis nula.
+
+___
+
+```{r}
+alpha <- 0.05
+n1 <- 10
+n2 <- 10
+s1 <- 0.2
+s2 <- 0.4
+x_bar1 <- 0.64
+x_bar2 <- 2.05
+D_0 <- -1
+
+z <- qnorm(alpha)
+z_0 <- (x_bar1 - x_bar2 - D_0) / sqrt((s1^2 / n1) + (s2^2 / n2))
+
+print(z)
+print(z_0)
+
+```
+
+Así, sabemos que
+
+$z_{\alpha} = -1.644854 > \frac{\bar{X}_1 - \bar{X}_2 - D_0}{\sqrt{\frac{\sigma_1^2}{n_1} + \frac{\sigma_2^2}{n_2}}} = -3.1195$ Por lo que se rechaza $H_0$.
+
 
 
 4. Conclusiones  
 
-### Ejercicio 8.BIS
+Podemos rechazar la hipótesis nula, lo que sugiere que la diferencia entre $\mu_1$ y $\mu_2$ es menor que $-1$. 
+
+Así, hay una diferencia significativa en la magnitud del deterioro de la circulación sanguínea en los dedos de manos y pies entre personas con el síndrome de Reynaud y personas sin el síndrome.
+
+
+## Ejercicio 8.BIS
 
 Suponga que $\mu_A$ y $\mu_B$ son las verdaderas distancias medias de parada a velocidad de $50\left(\frac{m}{h}\right)$  para automóviles de cierto tipo. 
 
 Dichos autos están equipados con dos tipos diferentes de   sistemas de frenos: el sistema de freno $A$, que en $6$ pruebas tuvo una estimación de la media   igual a $2m$ y una estimación de la desviación estándar igual a $1.8 m$. Mientras que el sistema   de freno $B$, en $6$ pruebas, tuvo una estimación de la media igual a $2.5 m$ y una estimación   de la desviación estándar igual a $2.2 m$. 
 
 Utilice la prueba $t$ al nivel de significancia de $0.01$   para probar si la media de la distancia de parada del sistema de freno $B$ excede por más de   $0.5 m$ a la media de la distancia de parada del sistema 
->>(Hint: Investigue y aplique la   variación del estadístico t-student con la corrección de grados de libertad a la   Satterthwaite)  
+>>(Hint: Investigue y aplique la   variación del estadístico t-student con la corrección de grados de libertad a la Satterthwaite)  
 
-5. Establecer las hipótesis  
-6. Muestral la evidencia muestral e información poblacional  
-7.  Al nivel de significancia establecido encontrar la región de rechazo.  
-8. Conclusiones  
+1. Establecer las hipótesis  
+  
+$$H_0: \mu_B - \mu_A \leq 0.5$$
+$$H_1: \mu_B - \mu_A > 0.5$$
+
+2. Muestral la evidencia muestral e información poblacional  
+
+| Parámetro | Valor |
+|---:|---|
+| $\alpha$ | 0.01 |
+| Tamaño de muestra | $n_A = 6$ |
+| Tamaño de muestra | $n_B = 6$ |
+| $s_A$ | 1.8 |
+| $s_B$ | 2.2 |
+| $\bar{X}_A$ | 2 |
+| $\bar{X}_B$ | 2.5 |
+| $D_0$ | 0.5 |
 
 
-# Ejercicio 9
+3.  Al nivel de significancia establecido encontrar la región de rechazo.  
 
-Un fabricante de baterías para automóvil afirma que sus baterías durarán, en promedio,   tres años con una varianza de un año y medio. Si con cinco de estas baterías se calcula una   varianza muestral de $1.66$, pruebe si la afirmación del fabricante de que $\sigma_2=1.5$ es válida.   Suponga que la población de duraciones de las baterías se distribuye de forma   aproximadamente normal. 
+
+El estadístico de prueba es:
+
+$$t = \frac{\bar{X}_A - \bar{X}_B - d_0}{\sqrt{\frac{s_B^2}{n_B} + \frac{s_A^2}{n_A}}}$$
+
+Utilizando la distribución t con la corrección Satterthwaite de grados de libertad aproximados
+
+
+la región de rechazo es:
+
+$t \geq t_{\alpha, \nu}$, donde $\nu$ es el número de grados de libertad aproximados:
+
+$$\nu \approx \frac{\left(\frac{s_A^2}{n_A} + \frac{s_B^2}{n_B}\right)^2}{\frac{(s_A^2/n_A)^2}{n_A-1} + \frac{(s_B^2/n_B)^2}{n_B-1}}$$
+
+```{r}
+n_a <- 6
+x_bar_a <- 2
+s_a <- 1.8
+n_b <- 6
+x_bar_b <- 2.5
+s_b <- 2.2
+alpha <- 0.01
+d_0 <- 0.5
+
+v <- ((s_a^2/n_a + s_b^2/n_b)^2) / ( (s_a^2/n_a)^2 / (n_a - 1) + (s_b^2/n_b)^2 / (n_b - 1) )
+
+t_0 <- (x_bar_a - x_bar_b - d_0)/sqrt((s_b^2/n_b) + (s_a^2/n_a))
+
+t_alpha <- qt(1-alpha, v)
+
+print(v)
+print(t_0)
+print(t_alpha)
+```
+
+
+4. conclusiones
+
+Como $t_0 = -0.86  < t_{0.99, v} = 2.82$ no se rechaza $H_0$. Por lo tanto, no hay suficiente evidencia para afirmar que la media de la distancia de parada del sistema de freno $B$ excede por más de $0.5 m$ a la media de la distancia de parada del sistema $A$ al nivel de significancia de $0.01$.
+
+## Ejercicio 9
+
+Un fabricante de baterías para automóvil afirma que sus baterías durarán, en promedio,   tres años con una varianza de un año y medio. Si con cinco de estas baterías se calcula una   varianza muestral de $1.66$, pruebe si la afirmación del fabricante de que $\sigma^2=1.5$ es válida.   Suponga que la población de duraciones de las baterías se distribuye de forma   aproximadamente normal. 
 >Utilice $\alpha=0.02$
 
 
+1. Establecer las hipótesis
+$$H_0: \sigma^2 = 1.5$$
+$$H_1: \sigma^2 \neq 1.5$$
+
+2. Muestral la evidencia muestral e información poblacional
+  
+| Parámetro | Valor |
+|---:|---|
+| $\alpha$ | 0.02 |
+| Tamaño de muestra | $n = 5$ |
+| $\mu$ | 3 |
+| $S^2$ | 1.66 |
+| $\sigma^2$ | 1.5 |
+
+3.  Al nivel de significancia establecido encontrar la región de rechazo.
+
+
+$$\chi^2 = \frac{(n-1)s^2}{\sigma_0^2}$$
+
+La región de rechazo para una prueba de dos colas con nivel de significancia $\alpha$ es:
+
+$$\chi^2 < \chi_{\alpha/2, n-1}^2 \text{ o } \chi^2 > \chi_{1-\alpha/2, n-1}^2$$
+
+
+```{r}
+alpha <- 0.02
+n <- 5
+s2 <- 1.66
+sigma0_2 <- 1.5
+
+chi2 <- (n-1)*s2^2/sigma0_2
+
+chi_alpha_2 <- qchisq(alpha/2, df = n-1)
+chi_1_alpha_2 <- qchisq(1-alpha/2, df = n-1)
+
+print(chi2)
+print(chi_alpha_2)
+print(chi_1_alpha_2)
+
+```
+
+Así, $7.34 < 0.29$ o $7.34 > 13.27.$ Por lo tanto, la hipótesis nula $H_0$ se rechaza al nivel de significancia $\alpha=0.02$.
+
+4. conclusiones
+
+ No hay suficiente evidencia para afirmar que la varianza de la duración de las baterías es distinta de 1.5 años.
